feat: op count timers (#4471)
This expands on the previous
https://github.com/AztecProtocol/aztec-packages/pull/4437 PR with the
ability to automatically microbenchmark pieces.

- If you want to measure timing , uses the preset `op-count-time`
- If you want to measure call counts, uses the preset `op-count-track`

Example of google benchmark running with preset op-count-time
```
------------------------------------------------------------------------------------
Benchmark                          Time             CPU   Iterations UserCounters...
------------------------------------------------------------------------------------
GoblinBench/GoblinFull/1       10609 ms         9065 ms            1 batch_mul_with_endomorphism=48 batch_mul_with_endomorphism(t)=646.575M
^C

-----------------------------------------------------------------------------------
Benchmark                         Time             CPU   Iterations UserCounters...
-----------------------------------------------------------------------------------
GoblinBench/GoblinFull/2      15225 ms        13342 ms            1 batch_mul_with_endomorphism=52 batch_mul_with_endomorphism(t)=1.02146G
```
Note with nanosecond units, one M(illion) is one millisecond, one G(iga)
is one second

---------

Co-authored-by: ludamad <adam@aztecprotocol.com>

--- a/yarn-project/sequencer-client/package.json
+++ b/yarn-project/sequencer-client/package.json
@@ -68,5 +68,13 @@
   "types": "./dest/index.d.ts",
   "engines": {
     "node": ">=18"
+  },
+  "jest": {
+    "preset": "ts-jest/presets/default-esm",
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.[cm]?js$": "$1"
+    },
+    "testRegex": "./src/.*\\.test\\.(js|mjs|ts)$",
+    "rootDir": "./src"
   }
 }
